fdo#79249 call formula compiler with error string

... instead of attempting to stringize a NaN coded error value.

Regression introduced with 30a20743ae17e6e02183a65603d38968253b3ffb

(cherry picked from commit 994607b55104b9ae4554554c13b001b8d5d513b6)

construct grouped ScFormulaCell with bDirty=true, fdo#79249 related

Noticed when loading
https://bugs.freedesktop.org/attachment.cgi?id=99844
with fdo#79249 fix where oox::xls::applyCellFormulas() groups the
consecutive =#N/A formulas. Only A1 result was displayed, other cells
were displayed empty.

(cherry picked from commit a1dc5e97da273bf35d58d54e625149022569a993)

correct error string, #N/A instead of #NA

(cherry picked from commit 758755e31b3d9e1ed2eab522d4794282178346ac)

implement an actually working setErrorCell() from BIFF error codes

(cherry picked from commit ca9a81b2ca858b82e863e1e6f917928916fea79e)

3a541f74d3d25e1515a1c6d47f02ec6a8e817c93
15019072b6e812b9ffe29d3ee6afacd9ab526948
67b8fc324779875ba14e2d69204c40fe27cc180e
Reviewed-on: https://gerrit.libreoffice.org/13492
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

Conflicts:
	sc/source/filter/oox/sheetdatabuffer.cxx

Change-Id: Ia7a8ca39938820ac75db169404446fa696c6ee1b