sc/source/filter/oox/unitconverter.cxx
@@ -226,6 +226,20 @@ sal_uInt8 UnitConverter::calcBiffErrorCode( const OUString& rErrorCode ) const
     return (aIt == maOoxErrCodes.end()) ? BIFF_ERR_NA : aIt->second;
 }
 
+const OUString& UnitConverter::calcErrorString( sal_uInt8 nErrorCode ) const
+{
+    OoxErrorCodeMap::const_iterator iFail( maOoxErrCodes.end());
+    for (OoxErrorCodeMap::const_iterator aIt( maOoxErrCodes.begin()); aIt != maOoxErrCodes.end(); ++aIt)
+    {
+        if (aIt->second == nErrorCode)
+            return aIt->first;
+        if (aIt->second == BIFF_ERR_NA)
+            iFail = aIt;
+    }
+    assert(iFail != maOoxErrCodes.end());   // BIFF_ERR_NA really should be in the map..
+    return iFail->first;
+}
+
 void UnitConverter::addErrorCode( sal_uInt8 nErrorCode, const OUString& rErrorCode )
 {
     maOoxErrCodes[ rErrorCode ]  = nErrorCode;
